# serial-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/serial_monitor/: Monitor.py  PortSelector.py  main.py
